--- a/arch/arm/configs/galaxys4g_defconfig
+++ b/arch/arm/configs/galaxys4g_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Fri Aug 10 21:58:29 2012
+# Sat Aug 11 01:15:12 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1034,9 +1034,9 @@ CONFIG_NETDEV_1000=y
 CONFIG_NETDEV_10000=y
 CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
-CONFIG_BROADCOM_WIFI=m
-CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
-CONFIG_WLAN_SAMSUNG_MEMSIZE_BCM=256
+CONFIG_BCM4329=m
+CONFIG_BCM4329_FW_PATH="/system/etc/wifi/bcm4329_sta.bin"
+CONFIG_BCM4329_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
 # CONFIG_BROADCOM_WIFI_4330 is not set
 # CONFIG_HOSTAP is not set
 
