--- a/arch/arm/configs/galaxys4g_defconfig
+++ b/arch/arm/configs/galaxys4g_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Sat Aug 11 01:15:12 2012
+# Sat Aug 11 13:36:08 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -959,7 +959,7 @@ CONFIG_USB_SWITCH_FSA9480=y
 # CONFIG_IWMC3200TOP is not set
 CONFIG_SAMSUNG_MODEMCTL=y
 CONFIG_CP_CHIPSET_STE=y
-# CONFIG_VIBETONZ is not set
+CONFIG_VIBETONZ=m
 CONFIG_PN544=y
 CONFIG_J4FS=y
 CONFIG_PARAM=y
