--- a/arch/arm/configs/galaxys4g_defconfig
+++ b/arch/arm/configs/galaxys4g_defconfig
@@ -338,8 +338,8 @@ CONFIG_S5PC110_VIBRANTPLUS_BOARD=y
 CONFIG_VIBRANTPLUS_VER_B0=y
 # CONFIG_FLEMING_VER_B0 is not set
 # CONFIG_DEMPSEY_VER_B0 is not set
-CONFIG_GPS_CHIPSET_STE_GNS7560=y
-# CONFIG_GPS_CHIPSET_STE_CG2900 is not set
+# CONFIG_GPS_CHIPSET_STE_GNS7560 is not set
+CONFIG_GPS_CHIPSET_STE_CG2900=y
 CONFIG_ARIES_EUR=y
 # CONFIG_ARIES_NTT is not set
 # CONFIG_ARIES_LATONA is not set
@@ -1370,7 +1370,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_TMIO is not set
 # CONFIG_MFD_T7L66XB is not set
 # CONFIG_MFD_TC6387XB is not set
-# CONFIG_MFD_CG2900 is not set
+CONFIG_MFD_CG2900=y
 # CONFIG_MFD_TC6393XB is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_PMIC_ADP5520 is not set
