--- a/arch/arm/configs/galaxys4g_defconfig
+++ b/arch/arm/configs/galaxys4g_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Sat Aug 11 13:36:08 2012
+# Tue May 19 12:16:07 2015
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -852,13 +852,17 @@ CONFIG_BT_HIDP=y
 #
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
-# CONFIG_BT_HCIUART is not set
+CONFIG_BT_HCIUART=y
+# CONFIG_BT_HCIUART_H4 is not set
+# CONFIG_BT_HCIUART_BCSP is not set
+# CONFIG_BT_HCIUART_LL is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
 CONFIG_BT_HID=y
+# CONFIG_BT_CG2900 is not set
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
@@ -1371,6 +1375,11 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_T7L66XB is not set
 # CONFIG_MFD_TC6387XB is not set
 CONFIG_MFD_CG2900=y
+CONFIG_MFD_CG2900_CHIP=y
+CONFIG_MFD_STLC2690_CHIP=y
+CONFIG_MFD_CG2900_UART=y
+CONFIG_MFD_CG2900_AUDIO=y
+CONFIG_MFD_CG2900_TEST=y
 # CONFIG_MFD_TC6393XB is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_PMIC_ADP5520 is not set
@@ -1533,6 +1542,7 @@ CONFIG_RADIO_ADAPTERS=y
 # CONFIG_RADIO_TEA5764 is not set
 # CONFIG_RADIO_SAA7706H is not set
 # CONFIG_RADIO_TEF6862 is not set
+CONFIG_RADIO_CG2900=y
 # CONFIG_DAB is not set
 
 #
@@ -1780,8 +1790,18 @@ CONFIG_USB_DEVICE_CLASS=y
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
 # CONFIG_USB_HWA_HCD is not set
+# CONFIG_USB_S3C_OTG_HOST is not set
 # CONFIG_USB_MUSB_HDRC is not set
 # CONFIG_USB_GADGET_MUSB_HDRC is not set
+CONFIG_USB_DWC_OTG=y
+# CONFIG_DWC_DEBUG is not set
+CONFIG_DWC_HOST_ONLY=y
+# CONFIG_DWC_OTG_MODE is not set
+# CONFIG_DWC_DEVICE_ONLY is not set
+# CONFIG_DWC_SLAVE is not set
+CONFIG_DWC_DMA_MODE=y
+CONFIG_DWC_OTG_REG_LE=y
+CONFIG_DWC_OTG_FIFO_LE=y
 
 #
 # USB Device Class drivers
@@ -1910,9 +1930,11 @@ CONFIG_USB_ANDROID_SAMSUNG_MTP=y
 #
 # OTG and related infrastructure
 #
+CONFIG_USB_OTG_UTILS=y
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_ULPI is not set
-# CONFIG_NOP_USB_XCEIV is not set
+CONFIG_NOP_USB_XCEIV=y
+# CONFIG_USB_HOST_NOTIFY is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_UNSAFE_RESUME=y
